--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 <article>{% block content %}
     <h1>About</h1>
-    {{ lipsum (n=5, html=True, min=20, max=100) }}
+    <p>
+
+    </p>
+
+      Hi There! My name is Frank. I am an MS in Computer Science student in New Jersey Institute
+                Technology(NJIT). I have learned how to use Git, Flask, Docker and CICD process to build a website. This
+                is a website that contains user registration, data upload, and basic calculation functions.
+                Please check the Welcome page for more details.
+                I've always been fascinated by the art of Computer Science! Happy coding!
 {% endblock %}
 </article>
