--- a/app/simple_pages/templates/welcome.html
+++ b/app/simple_pages/templates/welcome.html
@@ -3,7 +3,22 @@
     <div class="row">
         <article class="col-12">
             <h1>Welcome</h1>
-            {{ lipsum (n=5, html=True, min=20, max=100) }}
+            <p>
+            </p>
+            Basic functions about this website:
+            <p>
+            </p>
+            1. Use an email address to registrate as a user.
+            <p>
+            </p>
+            2. Manage your user profile and login information.
+            <p>
+            </p>
+            3. User management as an admin.
+            <p>
+            </p>
+            4. Upload transaction data (csv file). Browse date and check the total amount.
+
         </article>
     </div>
 {% endblock %}
