--- a/app/auth/templates/dashboard.html
+++ b/app/auth/templates/dashboard.html
@@ -1,8 +1,70 @@
-{% extends "base.html" %}
-{% block content %}
-    {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
-    <div id="row">
-    <h2>Dashboard</h2>
-    <p>Welcome: {{ current_user.email }}</p>
+{% from "bootstrap5/table.html" import render_table %}
+{% from "bootstrap5/pagination.html" import render_pager, render_pagination %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Transaction Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{ username.capitalize() }} Dashboard</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for("auth.dashboard") }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for("admin.index") }}">Admin</a>
+                </li>
+            </ul>
+        </div>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                   aria-expanded="false">
+                    Account
+                </a>
+                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item dropdown" href="{{ url_for("users.edit") }}">Edit Account</a>
+                    <a class="dropdown-item" href="{{ url_for("auth.logout") }}">Logout</a>
+                </div>
+            </li>
+        </ul>
     </div>
-{% endblock %}
+</nav>
+<div>
+    <h1 class="float-end me-5">Balance: ${{ total }}</h1>
+</div>
+<div class="container p-3">
+    {{ render_table(transactions) }}
+</div>
+<div class="container p-3">
+    {{ render_pagination(pagination) }}
+</div>
+<div>
+    <form method="POST" enctype="multipart/form-data" action="{{ url_for("auth.dashboard") }}">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            {{ form.file(class_="form-control form-control-sm float-end me-5 bi-cloud-upload", style="width: 300px" ) }}
+        </div>
+        <div class="mb-3 form-check">
+        </div>
+        {{ form.submit(class_="btn btn-primary float-end me-5 bi-cloud-upload", type="submit") }}
+    </form>
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+</html>
