--- a/app/auth/templates/login.html
+++ b/app/auth/templates/login.html
@@ -1,12 +1,64 @@
-{% extends "base.html" %}
-{% block content %}
-
-    <div class="row mt-5">
-
-         <div class="col-4 border border-1 border-dark mx-auto p-4">
-             <h2>Login</h2>
-             {{ render_form(form) }}
-         </div>
+{% from "bootstrap5/table.html" import render_table %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+<div class="container-fluid p-3">
+    <div class="row">
+        <div class="col-6">
+            <div class="row">
+                <div class="col-12">
+                    <img src="static/images/BankApplication.jpeg" height="750px" width="750px"/>
+                </div>
+            </div>
+        </div>
+        <div class="col-6 pt-5">
+            <div class="row">
+                <div class="col-12">
+                    <form class="card p-3 bg-light" method="POST" action="{{ url_for("auth.login") }}">
+                        <h1 class="modal-title w-100 text-center" id="exampleModalLabel">Login</h1>
+                        {{ form.hidden_tag() }}
+                        <div class="row">
+                            <div class="mb-3">
+                                <label class="form-label">Username</label>
+                                {{ form.username(class_="form-control", id="username", placeholder="Please enter your username", size=32) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="mb-3">
+                                <label class="form-label">Password</label>
+                                {{ form.password(class_="form-control", id="password", placeholder="Please enter your password", size=32) }}
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <a class="btn btn-secondary form-control btn-block"
+                                       href="{{ url_for("auth.register") }}"
+                                       role="button">Don't have an account? Register here!</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container pt-3">
+                            <div class="row">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-primary form-control btn-block">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-{% endblock %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+</html>
